--- a/chat-app/poll.html
+++ b/chat-app/poll.html
@@ -71,6 +71,107 @@ body {
     transition:width 300ms ease-in-out;
 }
 
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+    /* Modal Content */
+.modal-content {
+    background-color: #174368;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 800px;
+    border-radius: 8px;
+    max-width: 50%;
+}
+
+    /* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+    /* The modal internals*/
+    /* Add styles to the form container */
+.form-container {
+    max-width: 99%;
+    padding: 10px;
+    align-items: center;
+    margin: 25px 0 18px 0;
+    background-color:  #4884b6;
+    border-radius: 8px;
+    margin-top:40px;
+}
+
+    /* Full-width input fields */
+.form-container input[type=text], .form-container textarea {
+    width: 90%;
+    padding: 15px;
+    margin: 16px 0 16px 20px;
+    border: none;
+    background: #95b3ce;
+    border-radius: 5px;
+    resize: none;
+}
+
+    /* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container textarea:focus {
+    background-color: #bdc9d3;
+    outline: none;
+}
+.form-container ::placeholder{
+    color:#174368;
+    opacity: 0.8;
+}
+    /* Set a style for the submit button */
+.form-container .btn, .Mbutton {
+    background-color: #174368;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 20%;
+    margin-top:15px;
+    margin-bottom:20px;
+    margin-left: 20px;
+    opacity: 0.8;
+    border-radius: 8px;
+}
+.Mbutton{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 150px;
+}
+
+    /* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover, .Mbutton{
+    opacity: 1;
+}
+
+::placeholder{
+    color:#4884b6;
+}
 
 </style>
 <body>
@@ -78,9 +179,31 @@ body {
         <div class="question"></div>
         <div class="answers"></div>
     </div>
+
+     <!-- Trigger/Open The Modal -->
+     <button class="Mbutton" id="myBtn">Ask Question</button>
+     <!-- The Modal -->
+     <div id="myModal" class="modal">
+     <!-- Modal content -->
+     <div class="modal-content">
+         <span class="close">&times;</span>
+         <form id="message_input_form" class="form-container">
+             <input type="text" id="question_input" placeholder="Enter your question" name="question" required>
+             <input type="text" id="answer_input" placeholder="Option A" name="question" required>
+             <input type="text" id="answer_input" placeholder="Option B" name="question" required>
+             <input type="text" id="answer_input" placeholder="Option C" name="question" required>
+             <input type="text" id="answer_input" placeholder="Option D" name="question" required>
+             <button type="submit" id="post" class="btn">Post</button>
+
+             <!-- <a href=""><i class="fa-solid fa-pen"></i>whiteboard</a> -->
+             
+         </form>
+     </div>
+     </div>
 </body>
 
 <script>
+
 let poll = { 
     question: "What's your favorite programming language?",
     answers:[
@@ -131,6 +254,33 @@ function showResults(){
         answers[i].querySelector (".percentage-value").innerText = percentage + "%";
     }
 }
-                                                                        
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+modal.style.display = "none";
+}
+// When the user posts question, close the modal
+post.onclick  = function() {
+modal.style.display = "none";
+}
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+if (event.target == modal) {
+    modal.style.display = "none";
+}
+}                                                                        
 </script>
 </html>
